--- a/pyldavis.ipynb
+++ b/pyldavis.ipynb
@@ -2,21 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
+    "trusted": true,
     "ExecuteTime": {
-     "end_time": "2020-10-23T21:16:38.930991Z",
-     "start_time": "2020-10-23T21:16:38.925245Z"
-    },
-    "trusted": true
+     "end_time": "2025-10-20T18:05:56.200800Z",
+     "start_time": "2025-10-20T18:05:56.173196Z"
+    }
    },
-   "outputs": [],
    "source": [
-    "import pickle \n",
+    "import pickle\n",
     "\n",
     "import pyLDAvis\n",
     "import pyLDAvis.gensim"
-   ]
+   ],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pyLDAvis'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mModuleNotFoundError\u001B[39m                       Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[3]\u001B[39m\u001B[32m, line 3\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpickle\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m3\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpyLDAvis\u001B[39;00m\n\u001B[32m      4\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpyLDAvis\u001B[39;00m\u001B[34;01m.\u001B[39;00m\u001B[34;01mgensim\u001B[39;00m\n",
+      "\u001B[31mModuleNotFoundError\u001B[39m: No module named 'pyLDAvis'"
+     ]
+    }
+   ],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -37,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-23T21:19:14.606725Z",
@@ -45,29 +57,39 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pyLDAvis' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mNameError\u001B[39m                                 Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[1]\u001B[39m\u001B[32m, line 2\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;66;03m#Creating Topic Distance Visualization \u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m2\u001B[39m \u001B[43mpyLDAvis\u001B[49m.enable_notebook()\n\u001B[32m      3\u001B[39m p = pyLDAvis.gensim.prepare(lda_model, corpus, id2word)\n\u001B[32m      4\u001B[39m p \n",
+      "\u001B[31mNameError\u001B[39m: name 'pyLDAvis' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#Creating Topic Distance Visualization \n",
     "pyLDAvis.enable_notebook()\n",
     "p = pyLDAvis.gensim.prepare(lda_model, corpus, id2word)\n",
-    "p "
+    "p"
    ]
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "trusted": true
-   },
    "outputs": [],
-   "source": []
+   "execution_count": null,
+   "source": ""
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Medium env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -79,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.14.0"
   },
   "toc": {
    "base_numbering": 1,
